--- a/src/components/CardOfForm/index.css
+++ b/src/components/CardOfForm/index.css
@@ -1,7 +1,7 @@
 .card-of-form {
   background-color: beige;
   display: grid;
-  grid-template-rows: 10fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 10fr 1fr 1fr 1fr 1fr;
   max-width: 95%;
   border-radius: 10px;
   height: 100%;
