--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -1,9 +1,24 @@
-.card {
-  background-color: beige;
-  display: grid;
-  grid-template-rows: 7fr 2fr 1fr 1fr;
+.modal-card {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: scale(0);
 }
 
-.user_foto {
-  max-width: 100%;
+.modal-card.active {
+  transform: scale(1);
+}
+
+.modal-card-content {
+  padding: 20px;
+  border-radius: 5px;
+  background-color: beige;
+  height: 200px;
+  width: 200px;
 }
