--- a/src/components/Form/index.css
+++ b/src/components/Form/index.css
@@ -6,3 +6,18 @@
   font-style: italic;
   color: red;
 }
+
+.subm_mess {
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  background-color: rgba(222, 184, 135, 0.6);
+  border-radius: 30px;
+}
+
+.subm_mess_text {
+  font-style: italic;
+  color: #1b0d0d;
+  font-size: 30px;
+  padding: 20px;
+}
